# mips-emu

mips-fe/: index.html  package-lock.json  package.json  vite.config.ts
mips-fe/public/: output.css
mips-fe/src/: App.tsx  main.tsx
mips-fe/src/app/: RegisterDisplay.tsx  TextBox.tsx  regHandler.ts
mips_be/: Cargo.toml
mips_be/src/: lib.rs  parser.rs
